# infinite-impulse-response

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: test-on-push.yml
include/: exponential_moving_average.h
test/: tests.cpp
